[package]
name = "msicrab"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.28", features = ["derive"] }
csv = "1.3.1"
serde = "1.0.217"
thiserror = "2.0.11"
wmi = "0.15.0"

[dependencies.windows]
version = "0.59"
features = [
    "Data_Xml_Dom",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
]
